Update build.xml to add "all" target

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project>
+<project name="dbutility">
 	
 	<path id="utility.classpath">
 		<fileset dir="/opt/liferay/utility-jars">
@@ -11,6 +11,12 @@
 			<include name="*.jar"/>
 		</fileset>
 	</path>
+	
+	<target name="all">
+		<antcall target="clean" />
+		<antcall target="jar" />
+	</target>
+			
     <target name="clean">
         <delete dir="build"/>
     </target>
@@ -23,7 +29,7 @@
         </javac>
     </target>
 
-    <target name="jar">
+    <target name="jar" depends="compile">
         <mkdir dir="build/jar"/>
         <jar destfile="/opt/liferay/portlet-ext/dbutility.jar" basedir="build/classes">
         </jar>
