--- a/build.xml
+++ b/build.xml
@@ -10,22 +10,12 @@
 		</fileset>
 	</path>
 	
-	<target name="copyDependenciesToServer">
-		<copy todir="${app.server.lib.global.dir}">
-			<fileset dir="${dependencies}/${ant.project.name}-dependencies">
-				<include name="*.jar"/>
-			</fileset>
-		</copy>
-	</target>
-
-	
     <target name="clean">
         <delete dir="build"/>
     </target>
 
     <target name="compile" depends="clean">
-    	
-    	<mkdir dir="${dependencies}"/>
+    	    	<mkdir dir="${dependencies}"/>
         <mkdir dir="${dependencies}/${ant.project.name}-dependencies"/>
     	<!-- <copy todir="${dependencies}/${ant.project.name}-dependencies">
     		<fileset dir="${dropbox.home}/jars/projects-dependencies/${ant.project.name}-dependencies">
@@ -41,25 +31,23 @@
     </target>
 
     <target name="jar" depends="compile">
-    	<jar destfile="/opt/liferay/portlet-ext/dbutility.jar" basedir="build/classes" />
+    	<jar destfile="${app.server.lib.global.dir}/dbutility.jar" basedir="build/classes" />
     	<antcall target="clean"/>
     	
     	<mkdir dir="${dependencies}/waveform-annotations-dependencies"/>
 		<mkdir dir="${dependencies}/waveform-utilities-dependencies"/>
 		<mkdir dir="${dependencies}/cvrg-broker-service-dependencies"/>
 		
-		<copy todir="${dependencies}/waveform-annotations-dependencies" file="/opt/liferay/portlet-ext/dbutility.jar" />
-		<copy todir="${dependencies}/waveform-utilities-dependencies" file="/opt/liferay/portlet-ext/dbutility.jar" />
-    	<copy todir="${dependencies}/cvrg-broker-service-dependencies" file="/opt/liferay/portlet-ext/dbutility.jar" />
+		<copy todir="${dependencies}/waveform-annotations-dependencies" file="${app.server.lib.global.dir}/dbutility.jar" />
+		<copy todir="${dependencies}/waveform-utilities-dependencies" file="${app.server.lib.global.dir}/dbutility.jar" />
+    	<copy todir="${dependencies}/cvrg-broker-service-dependencies" file="${app.server.lib.global.dir}/dbutility.jar" />
     	
-    	<copy todir="/opt/liferay/liferay-plugins-sdk-6.1.1/portlets/analyze-portlet/docroot/WEB-INF/lib" file="/opt/liferay/portlet-ext/dbutility.jar" />
-    	<copy todir="/opt/liferay/liferay-plugins-sdk-6.1.1/portlets/upload-portlet/docroot/WEB-INF/lib" file="/opt/liferay/portlet-ext/dbutility.jar" />
-    	<copy todir="/opt/liferay/liferay-plugins-sdk-6.1.1/portlets/download-portlet/docroot/WEB-INF/lib" file="/opt/liferay/portlet-ext/dbutility.jar" />
-    	<copy todir="/opt/liferay/liferay-plugins-sdk-6.1.1/portlets/visualize-portlet/docroot/WEB-INF/lib" file="/opt/liferay/portlet-ext/dbutility.jar" />
-    	    	
-    	<copy todir="${app.server.deploy.dir}/axis2/WEB-INF/lib" file="/opt/liferay/portlet-ext/dbutility.jar" />
-    	
-    	<echo>The username is ${user.name}</echo>
+    	<delete file="${liferay}/portlet-ext/dbutility.jar"></delete>
+    	<delete file="${liferay}/liferay-plugins-sdk-6.1.1/portlets/analyze-portlet/docroot/WEB-INF/lib/dbutility.jar"></delete>
+    	<delete file="${liferay}/liferay-plugins-sdk-6.1.1/portlets/upload-portlet/docroot/WEB-INF/lib/dbutility.jar"></delete>
+    	<delete file="${liferay}/liferay-plugins-sdk-6.1.1/portlets/download-portlet/docroot/WEB-INF/lib/dbutility.jar"></delete>
+    	<delete file="${liferay}/liferay-plugins-sdk-6.1.1/portlets/visualize-portlet/docroot/WEB-INF/lib/dbutility.jar"></delete>
+    	<delete file="${app.server.deploy.dir}/axis2/WEB-INF/lib/dbutility.jar"></delete>
     	
     </target>
 
