--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/com.liferay.ide.eclipse.server.tomcat.runtimeClasspathProvider/Liferay v6.1 CE (Tomcat 7)"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/axis-lib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dbutility-dependencies"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
